--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": "David Anderson",
   "license": "",
   "scripts": {
+    "develop": "rm -rf .cache && ./node_modules/.bin/gatsby develop",
+    "start": "npm run develop",
+    "build": "./node_modules/.bin/gatsby build",
+    "serve": "./node_modules/.bin/gatsby serve"
   },
   "peerDependencies": {},
   "dependencies": {
@@ -16,7 +20,7 @@
     "@mdx-js/mdx": "^1.1.0",
     "@mdx-js/react": "^1.0.27",
     "code-surfer": "3.0.0-beta.1",
-    "gatsby": "2.13.58",
+    "gatsby": "^2.18.14",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-compile-es6-packages": "^2.0.0",
     "gatsby-plugin-manifest": "^2.2.4",
